# palletinator

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: dependency-review.yaml  docs.yaml  python-ci.yaml  python-publish-pypi.yaml
docs/: conf.py
docs/source/: conf.py  index.rst
src/palletinator/: __init__.py  engine.py  inputs.py  models.py  pallet.py  pallet_program.py
tests/: test_engine.py
