[project]
name = "palletinator"
version = "0.1.0"
description = "Pallet-inator"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@tailstory.dev" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = []

[project.urls]
repository = "https://github.com/tailstory-labs/palletinator"
documentation = "https://tailstory-labs.github.io/palletinator/"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "prek>=0.3.8",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "ty>=0.0.34",
]
docs = [
    "sphinx>=8.1.0",
    "furo>=2025.12.19",
    "sphinx-autoapi>=3.8.0",
    "releases>=2.1.1",
]
tests = [
    "coverage>=7.13.4",
    "pytest>=9.0.3",
    # Extensions
    "pytest-randomly>=4.0.1",
    # Reporting
    "allure-pytest>=2.15.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "CPY001", # (Missing copyright notice at top of file) - No license
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `docs/conf.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "S101",    # (Use of `assert` detected) - Yes, that's the point
    "D103",    # (Missing docstring in public function) - Test names are docs
    "PLR2004", # (Magic value used in comparison) - Tests assert against literals
]

[tool.ruff.lint.isort]
known-first-party = ["palletinator"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
pretty = true

[tool.coverage.run]
branch = true
source_pkgs = ["palletinator"]
source_dirs = ["tests"]

[tool.pytest]
strict = true
junit_family = "xunit1"
